<resources>
    <string-array name="languages">
        <item>Croatian</item>
        <item>English</item>
        <item>German</item>
        <item>French</item>
    </string-array>
    <string-array name="max_score_array">
<!--        <item>501</item>-->
<!--        <item>701</item>-->
        <item>1001</item>
    </string-array>
    <string name="app_name">Bela Blok</string>
    <string name="team1_name">Team 1</string>
    <string name="team2_name">Team 2</string>
    <string name="ok_text" translatable="false">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="rename_text">Rename</string>
    <string name="delete_game_in_progress_text">Delete game in progress?</string>
    <string name="delete_text">Delete</string>
    <string name="save_game_text">Save game</string>
    <string name="new_game">New game</string>
    <string name="history">History</string>
    <string name="app_label" translatable="false">Bela blok (2 VS 2)</string>
    <string name="background_image" translatable="false">background_image</string>
    <string name="new_entry_fab" translatable="false">new_entry_fab</string>
    <string name="settings_label">Settings</string>
    <string name="language_text">Language</string>
    <string name="enter_text">Enter</string>
    <string name="full_game_text">Full Game</string>
    <string name="restore_to_default_text">Restore to default</string>
    <string name="delete_game_text">Delete game</string>
    <string name="game_deleted_text">Game is deleted</string>
    <string name="undo_text">Undo</string>
    <string name="has_won_text">won the match!</string>
    <string name="wrong_entry_text">Wrong entry!</string>
    <string name="dark_theme_text">Dark Theme</string>
</resources>