<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/masterFragment">

    <fragment
        android:id="@+id/allGamesFragment"
        android:name="com.ricko.belablok.ui.allgames.AllMatchesFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_all_matches" />
    <fragment
        android:id="@+id/currentGameFragment"
        android:name="com.ricko.belablok.ui.currentgame.CurrentGameFragment"
        android:label="@string/app_label"
        tools:layout="@layout/fragment_current_game" />
    <fragment
        android:id="@+id/masterFragment"
        android:name="com.ricko.belablok.ui.masterfragment.MasterFragment"
        android:label="@string/app_label"
        tools:layout="@layout/fragment_master_current_game" >
        <action
            android:id="@+id/action_masterFragment_to_allGamesFragment"
            app:destination="@id/allGamesFragment" />
        <action
            android:id="@+id/action_masterFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.ricko.belablok.ui.settings.SettingsFragment"
        android:label="@string/settings_label"
        tools:layout="@layout/fragment_settings" />
</navigation>