<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.settings.SettingsFragment">

    <data>

        <variable
            name="viewModelSettings"
            type="com.ricko.belablok.ui.settings.SettingsViewModel" />

        <variable
            name="mContext"
            type="android.content.Context" />

        <variable
            name="mActivity"
            type="androidx.fragment.app.FragmentActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="?attr/colorSurface">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_spinner"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/language_text"
            android:labelFor="@+id/dropDownMenu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/dropDownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@={viewModelSettings.currentLanguage}"
                app:fillDropDownMenu="@{mContext}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:visibility="gone"
            android:id="@+id/switchTheme"
            android:layout_width="match_parent"
            android:checked="@={viewModelSettings.isDarkThemeOn()}"
            android:onClick="@{(v)->viewModelSettings.themeChange(v)}"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_dark_mode"
            android:text="@string/dark_theme_text"
            app:layout_constraintTop_toBottomOf="@+id/til_spinner"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{(v)->viewModelSettings.restoreDefaultSettings(v)}"
            android:text="@string/restore_to_default_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switchTheme" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>